[package]
name = "neutron_route_finder"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 1

[dependencies]
bincode = "2.0.1"
csv = "1.3.1"
fast_fp = "0.1.3"
flate2 = "1.1.1"
memmap2 = "0.9.5"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
sqlite = "0.37.0"
tokio = {version = "1.45.0", features = ["rt", "macros", "rt-multi-thread"]}
